# fermi

./: .gitignore  README.md  TODO  matrix_original.mtx  matrix_original.npz  prediction_module.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
docs/: api.rst  conf.py
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  index.doctree
docs/_build/html/.doctrees/source/: fermi.doctree  index.doctree
docs/source/: api.rst  conf.py  index.rst
fermi/: .matrix_processor.py.swo  .matrix_processor.py.swp  __init__.py  economic_fitness_complexity.py  matrix_processor.py  prediction_module.py  raw_matrix_processor.py  relatedness_metrics.py
fermi.egg-info/: PKG-INFO  SOURCES.txt  requirements-dev.txt  requires.txt
