[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fermi"
version = "0.1.0"
description = "FitnEss Relatedness and other MetrIcs"
authors = [
    { name="EFC Lab", email="info@efc.lab" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0",
    "pandas",
    "scikit-learn>=1.4.2",
    "scipy",
    "matplotlib",
    "seaborn",
    "bokeh",
    "tqdm"
]

[tool.setuptools.packages.find]
where = ["fermi"]

[project.urls]
"Homepage" = "https://github.com/EFC-data/fermi"
